remove source and edit links in right menu

--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Electronic Data Entry Options for IEP Surveys"
 author: "IEP DUWG 'e-Device' Sub-group led by Karrin Alstad"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-url: "https://github.com/GitKarIn/e-device2.git"
+url: "https://interagencyecologicalprogram.github.io/e-device/"
 documentclass: book
 description: "This bookdown document is intended to summarize the research collected
   by IEP DUWG members regarding the use of electronic data entry tools in IEP Surveys.
