echo=False for lib(here) survey123

--- a/04-survey123.Rmd
+++ b/04-survey123.Rmd
@@ -16,7 +16,7 @@ From G2 Business Software Review: Survey123 is included with ArcGIS, and provide
 Surveys123 Survey Forms are created and stored through the ESRI web interface (see \@ref(fig:ESRIweb)); access requires a current ESRI license. Survey123 forms can be downloaded to tablets, iPhones or iPads, and data collection can be made while the device is offline. Survey results are uploaded to cloud storage next time the device is on-line. 
 
 
-```{r setup}
+```{r setup, echo=FALSE}
 library(here)
 ```
 
