--- a/05-PowerApps.Rmd
+++ b/05-PowerApps.Rmd
@@ -79,23 +79,23 @@ powform %>%
   
   
 kable(powform, format = "html", escape = F, caption = 'Forms Options',
-      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "2cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
+  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
+  column_spec(1, width_max = "3cm", bold = TRUE) %>%
+  column_spec(2, width_min = "1.5cm" ) %>%
+  column_spec(2, width_max = "2cm" ) %>%
+  column_spec(3, width_min = "1.5cm") %>%
+  column_spec(3, width_max = "2cm") %>%
+  column_spec(4, width_min = "2cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
+  column_spec(5, width_min = "2cm") %>%
   column_spec(5, width_max = "5cm") %>%
   column_spec(6, width_min = "2cm") %>%  
-  column_spec(7, width_min = "3cm") %>%
+  column_spec(6, width_max = "5cm") %>%  
   scroll_box(width = "800px", height = "600px") 
 ```
 
@@ -121,23 +121,23 @@ powdat %>%
 
 
 kable(powdat, format = "html", escape = F, caption = 'Data Interface Options',
-      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "2cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
+  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
+  column_spec(1, width_max = "3cm", bold = TRUE) %>%
+  column_spec(2, width_min = "1.5cm" ) %>%
+  column_spec(2, width_max = "2cm" ) %>%
+  column_spec(3, width_min = "1.5cm") %>%
+  column_spec(3, width_max = "2cm") %>%
+  column_spec(4, width_min = "2cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
+  column_spec(5, width_min = "2cm") %>%
   column_spec(5, width_max = "5cm") %>%
   column_spec(6, width_min = "2cm") %>%  
-  column_spec(7, width_min = "3cm") %>%
+  column_spec(6, width_max = "5cm") %>%  
   scroll_box(width = "800px", height = "600px") 
 
 ```
@@ -165,24 +165,22 @@ powhot %>%
 
 
 kable(powhot, format = "html", escape = F, caption = 'Photo Integration and External Sensors',  
-      col.names = c("Category","Feature"	,"Available","Description",	"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Category","Feature"	,"Available","Description",	"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "2cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
+  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
+  column_spec(1, width_max = "3.5cm", bold = TRUE) %>%
+  column_spec(2, width_min = "2.5cm" ) %>%
+  column_spec(2, width_max = "4cm" ) %>%
   column_spec(3, width_min = "2cm") %>%
   column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
-  column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "2cm") %>%  
-  column_spec(7, width_min = "3cm") %>%
-  
+  column_spec(4, width_min = "4cm") %>%
+  column_spec(4, width_max = "5.5cm") %>%
+  column_spec(5, width_min = "4cm") %>%
+  column_spec(5, width_max = "5.5cm") %>%
+
   scroll_box(width = "800px", height = "600px") 
 
 ```
@@ -205,21 +203,19 @@ powhard[] <- lapply(powhard, function(x) ifelse(is.na(x), "", x))
 #powhard <- powhard #%>% select(1:3,)
 
 kable(powhard, format = "html", escape = F, caption = 'Hardware Platform Options',
-      col.names = c("Feature"	,"Available",	"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Feature"	,"Available",	"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "6cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "7cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
+  column_spec(1, width_min = "7cm", bold = TRUE) %>%
+  column_spec(1, width_max = "8cm", bold = TRUE) %>%
+  column_spec(2, width_min = "3cm" ) %>%
+  column_spec(2, width_max = "3.5cm" ) %>%
+  column_spec(3, width_min = "4.5cm") %>%
+  column_spec(3, width_max = "5cm") %>%
   column_spec(4, width_min = "4.5cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "2.5cm") %>%
-  column_spec(5, width_max = "3cm") %>%
 
   scroll_box(width = "800px", height = "600px") 
 
@@ -236,12 +232,12 @@ library(kableExtra)
 
 powsec[] <- lapply(powsec, function(x) ifelse(is.na(x), "", x))
 
-kable(powsec, format = "html", escape = F, caption = 'Security Factors', booktabs = TRUE, align =  "l",col.names = c("Feature"	,"Available",	"Description","Group Notes","External  Reviews","Score(0-3)")) %>%
+kable(powsec, format = "html", escape = F, caption = 'Security Factors', booktabs = TRUE, align =  "l",col.names = c("Feature"	,"Available",	"Description","Group Notes","External  Reviews")) %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "4cm", bold = TRUE, italic = F) %>%
+  column_spec(1, width_min = "3cm", bold = TRUE) %>%
+  column_spec(1, width_max = "4cm", bold = TRUE) %>%
   column_spec(2, width_min = "2cm" ) %>%
   column_spec(2, width_max = "3cm" ) %>%
   column_spec(3, width_min = "3cm") %>%
@@ -250,7 +246,6 @@ kable(powsec, format = "html", escape = F, caption = 'Security Factors', booktab
   column_spec(4, width_max = "5cm") %>%
   column_spec(5, width_min = "4.5cm") %>%
   column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "3cm") %>%  
   
   scroll_box(width = "800px", height = "600px") 
 
@@ -275,21 +270,20 @@ powbus[] <- lapply(powbus, function(x) ifelse(is.na(x), "", x))
 powbus %>%
   group_by(Feature) %>%
   mutate(Feature = ifelse(duplicated(Feature), "", Feature))  %>%
-kable(powbus, format = "html", escape = F, caption = 'Business Model and Pricing',  booktabs = TRUE,col.names = c("Feature"	,"Description","Price","Group Notes","External Reviews","Score(0-3)"), align =  "l") %>%
+kable(powbus, format = "html", escape = F, caption = 'Business Model and Pricing',  booktabs = TRUE,col.names = c("Feature"	,"Description","Price","Group Notes","External Reviews"), align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =TRUE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "4cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "5cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "4cm" ) %>%
-  column_spec(2, width_max = "5cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
+  column_spec(1, width_min = "3.5cm", bold = TRUE) %>%
+  column_spec(1, width_max = "4cm", bold = TRUE) %>%
+  column_spec(2, width_min = "3.5cm" ) %>%
+  column_spec(2, width_max = "4cm" ) %>%
+  column_spec(3, width_min = "3cm") %>%
+  column_spec(3, width_max = "4cm") %>%
+  column_spec(4, width_min = "4cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
+  column_spec(5, width_min = "4cm") %>%
   column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "3cm") %>%  
   scroll_box(width = "800px", height = "600px") 
 
 
