--- a/06-Fulcrum.Rmd
+++ b/06-Fulcrum.Rmd
@@ -105,23 +105,23 @@ fulcform %>%
   
   
 kable(fulcform, format = "html", escape = F, caption = 'Forms Options',
-      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "2cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
+  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
+  column_spec(1, width_max = "3cm", bold = TRUE) %>%
+  column_spec(2, width_min = "2.5cm" ) %>%
   column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
+  column_spec(3, width_min = "1.5cm") %>%
+  column_spec(3, width_max = "2cm") %>%
+  column_spec(4, width_min = "2cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
+  column_spec(5, width_min = "2cm") %>%
   column_spec(5, width_max = "5cm") %>%
   column_spec(6, width_min = "2cm") %>%  
-  column_spec(7, width_min = "3cm") %>%
+  column_spec(6, width_max = "5cm") %>%  
   scroll_box(width = "800px", height = "600px") 
 ```
 
@@ -147,23 +147,23 @@ fulcdat %>%
 
 
 kable(fulcdat, format = "html", escape = F, caption = 'Data Interface Options',
-      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "2cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
+  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
+  column_spec(1, width_max = "3cm", bold = TRUE) %>%
+  column_spec(2, width_min = "2.5cm" ) %>%
   column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
+  column_spec(3, width_min = "1.5cm") %>%
+  column_spec(3, width_max = "2cm") %>%
+  column_spec(4, width_min = "2cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
+  column_spec(5, width_min = "2cm") %>%
   column_spec(5, width_max = "5cm") %>%
   column_spec(6, width_min = "2cm") %>%  
-  column_spec(7, width_min = "3cm") %>%
+  column_spec(6, width_max = "5cm") %>%  
   scroll_box(width = "800px", height = "600px") 
 
 ```
@@ -191,24 +191,22 @@ fulcphot %>%
 
 
 kable(fulcphot, format = "html", escape = F, caption = 'Photo Integration and External Sensors',  
-      col.names = c("Category","Feature"	,"Available","Description",	"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Category","Feature"	,"Available","Description",	"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "2cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
+  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
+  column_spec(1, width_max = "3.5cm", bold = TRUE) %>%
+  column_spec(2, width_min = "2.5cm" ) %>%
+  column_spec(2, width_max = "4cm" ) %>%
   column_spec(3, width_min = "2cm") %>%
   column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
-  column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "2cm") %>%  
-  column_spec(7, width_min = "3cm") %>%
-  
+  column_spec(4, width_min = "4cm") %>%
+  column_spec(4, width_max = "5.5cm") %>%
+  column_spec(5, width_min = "4cm") %>%
+  column_spec(5, width_max = "5.5cm") %>%
+
   scroll_box(width = "800px", height = "600px") 
 
 ```
@@ -230,21 +228,19 @@ library(kableExtra)
 fulchard[] <- lapply(fulchard, function(x) ifelse(is.na(x), "", x)) 
 
 kable(fulchard, format = "html", escape = F, caption = 'Hardware Platform Options',
-      col.names = c("Feature"	,"Available",	"Group Notes","External  Reviews","Score(0-3)"),
+      col.names = c("Feature"	,"Available",	"Group Notes","External  Reviews"),
       booktabs = TRUE, align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
-  column_spec(1, width_min = "6cm", bold = TRUE, italic = F) %>%
-  column_spec(1, width_max = "7cm", bold = TRUE, italic = F) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
+  column_spec(1, width_min = "7cm", bold = TRUE) %>%
+  column_spec(1, width_max = "8cm", bold = TRUE) %>%
+  column_spec(2, width_min = "3cm" ) %>%
+  column_spec(2, width_max = "3.5cm" ) %>%
+  column_spec(3, width_min = "4.5cm") %>%
+  column_spec(3, width_max = "5cm") %>%
   column_spec(4, width_min = "4.5cm") %>%
   column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "2.5cm") %>%
-  column_spec(5, width_max = "3cm") %>%
 
   scroll_box(width = "800px", height = "600px") 
 
@@ -261,7 +257,7 @@ library(kableExtra)
 
 fulcsec[] <- lapply(fulcsec, function(x) ifelse(is.na(x), "", x))
 
-kable(fulcsec, format = "html", escape = F, caption = 'Security Factors', booktabs = TRUE, align =  "l",col.names = c("Feature"	,"Available",	"Description","Group Notes","External  Reviews","Score(0-3)")) %>%
+kable(fulcsec, format = "html", escape = F, caption = 'Security Factors', booktabs = TRUE, align =  "l",col.names = c("Feature"	,"Available",	"Description","Group Notes","External  Reviews")) %>%
   kable_paper() %>% 
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   
@@ -275,7 +271,6 @@ kable(fulcsec, format = "html", escape = F, caption = 'Security Factors', bookta
   column_spec(4, width_max = "5cm") %>%
   column_spec(5, width_min = "4.5cm") %>%
   column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "3cm") %>%  
   
   scroll_box(width = "800px", height = "600px") 
 
@@ -300,7 +295,7 @@ fulcbus[] <- lapply(fulcbus, function(x) ifelse(is.na(x), "", x))
 fulcbus %>%
   group_by(Feature) %>%
   mutate(Feature = ifelse(duplicated(Feature), "", Feature))  %>%
-kable(fulcbus, format = "html", escape = F, caption = 'Business Model and Pricing',  booktabs = TRUE,col.names = c("Feature"	,"Description","Price","Group Notes","External Reviews","Score(0-3)"), align =  "l") %>%
+kable(fulcbus, format = "html", escape = F, caption = 'Business Model and Pricing',  booktabs = TRUE,col.names = c("Feature"	,"Description","Price","Group Notes","External Reviews"), align =  "l") %>%
   kable_paper() %>% 
   kable_styling(full_width =TRUE, fixed_thead = TRUE, font_size = 18) %>%
   
@@ -314,7 +309,6 @@ kable(fulcbus, format = "html", escape = F, caption = 'Business Model and Pricin
   column_spec(4, width_max = "5cm") %>%
   column_spec(5, width_min = "4.5cm") %>%
   column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "3cm") %>%  
   scroll_box(width = "800px", height = "600px") 
 
 
